[project]
name = "comfygit-env-deforum-revamp"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "aiohttp>=3.11.8",
    "alembic",
    "av>=14.2.0",
    "blake3",
    "comfy-aimdo==0.3.0",
    "comfy-kitchen>=0.2.8",
    "comfyui-embedded-docs==0.4.4",
    "comfyui-frontend-package==1.43.18",
    "comfyui-workflow-templates==0.9.73",
    "einops",
    "filelock",
    "glfw",
    "kornia>=0.7.1",
    "numpy>=1.25.0",
    "pillow",
    "psutil",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "pyopengl",
    "pyyaml",
    "requests",
    "safetensors>=0.4.2",
    "scipy",
    "sentencepiece",
    "simpleeval>=1.0.0",
    "spandrel",
    "sqlalchemy>=2.0.0",
    "tokenizers>=0.13.3",
    "torch",
    "torchaudio",
    "torchsde",
    "torchvision",
    "tqdm",
    "transformers>=4.50.3",
    "yarl>=1.18.0",
]

[tool.comfygit]
schema_version = 2
comfyui_version = "v0.21.0"
comfyui_version_type = "release"
comfyui_commit_sha = "52976f3ea33cc2312c7b5a32e1c7510b203eefb6"
python_version = "3.12"

[tool.comfygit.nodes.comfygit-manager]
name = "comfygit-manager"
registry_id = "comfygit-manager"
repository = "https://github.com/comfygit-ai/comfygit-manager"
version = "0.1.1"
download_url = "https://cdn.comfy.org/akatz/comfygit-manager/0.1.1/node.zip"
source = "registry"
criticality = "required"

[tool.comfygit.nodes.rgthree-comfy]
name = "rgthree-comfy"
registry_id = "rgthree-comfy"
repository = "https://github.com/rgthree/rgthree-comfy"
version = "1.0.2605082257"
download_url = "https://cdn.comfy.org/rgthree/rgthree-comfy/1.0.2605082257/node.zip"
source = "registry"
criticality = "required"

[tool.comfygit.nodes.comfyui-deforum]
name = "ComfyUI-Deforum"
repository = "https://github.com/deforum/deforum-comfy-nodes.git"
version = "dev"
source = "development"
criticality = "required"
branch = "main"
pinned_commit = "db95f90a9b9ff071b04801f165447ef3d199e93f"

[tool.comfygit.nodes.comfyui-basic-math]
name = "ComfyUI-Basic-Math"
registry_id = "comfyui-basic-math"
repository = "https://github.com/akatz-ai/ComfyUI-Basic-Math"
version = "0.0.6"
download_url = "https://cdn.comfy.org/akatz/comfyui-basic-math/0.0.6/node.zip"
source = "registry"
criticality = "required"

[tool.comfygit.nodes.comfyui_ryanonyheinside]
name = "RyanOnTheInside"
registry_id = "comfyui_ryanonyheinside"
repository = "https://github.com/ryanontheinside/ComfyUI_RyanOnTheInside"
version = "2.2.4"
download_url = "https://cdn.comfy.org/ryanontheinside/comfyui_ryanonyheinside/2.2.4/node.zip"
source = "registry"
criticality = "required"

[tool.comfygit.nodes.comfyui_fizznodes]
name = "ComfyUI_FizzNodes"
registry_id = "comfyui_fizznodes"
repository = "https://github.com/FizzleDorf/ComfyUI_FizzNodes"
version = "1.0.2"
download_url = "https://cdn.comfy.org/fizzledorf/comfyui_fizznodes/1.0.2/node.tar.gz"
source = "registry"
criticality = "required"

[tool.comfygit.workflows."deforum_flux_complex_v0.0.3"]
path = "workflows/deforum_flux_complex_v0.0.3.json"
nodes = ["comfyui-basic-math", "comfyui-deforum", "comfyui_fizznodes", "comfyui_ryanonyheinside", "rgthree-comfy"]

[tool.comfygit.workflows."deforum_flux_complex_v0.0.3".custom_node_map]
DeforumGetNode = "comfyui-deforum"
DeforumSetNode = "comfyui-deforum"
"Fast Groups Bypasser (rgthree)" = "rgthree-comfy"
"LatentNoiseInjection| Deforum" = "comfyui-deforum"

[[tool.comfygit.workflows."deforum_flux_complex_v0.0.3".models]]
filename = "t5xxl_fp16.safetensors"
category = "clip"
criticality = "required"
status = "resolved"
nodes = [{node_id = "698", node_type = "DualCLIPLoader", widget_idx = 0, widget_value = "t5xxl_fp16.safetensors"}]
hash = "1d3825351f374aa7"

[[tool.comfygit.workflows."deforum_flux_complex_v0.0.3".models]]
filename = "clip_l.safetensors"
category = "text_encoders"
criticality = "flexible"
status = "resolved"
nodes = [{node_id = "698", node_type = "DualCLIPLoader", widget_idx = 1, widget_value = "clip_l.safetensors"}]
hash = "a88c7c3d69609cdf"

[[tool.comfygit.workflows."deforum_flux_complex_v0.0.3".models]]
filename = "ae.safetensors"
category = "vae"
criticality = "flexible"
status = "resolved"
nodes = [{node_id = "699", node_type = "VAELoader", widget_idx = 0, widget_value = "ae.safetensors"}]
hash = "38f082e7b86d146b"

[[tool.comfygit.workflows."deforum_flux_complex_v0.0.3".models]]
filename = "Hyper-FLUX.1-dev-8steps-lora.safetensors"
category = "loras"
criticality = "flexible"
status = "resolved"
nodes = [{node_id = "763", node_type = "LoraLoaderModelOnly", widget_idx = 0, widget_value = "Hyper-FLUX.1-dev-8steps-lora.safetensors"}]
hash = "16dc7424ceec0771"

[[tool.comfygit.workflows."deforum_flux_complex_v0.0.3".models]]
filename = "FLUX-dev-lora-AntiBlur.safetensors"
category = "loras"
criticality = "flexible"
status = "resolved"
nodes = [{node_id = "765", node_type = "LoraLoaderModelOnly", widget_idx = 0, widget_value = "FLUX-dev-lora-AntiBlur.safetensors"}]
hash = "718b854a111f4401"

[[tool.comfygit.workflows."deforum_flux_complex_v0.0.3".models]]
filename = "flux1-dev-fp8.safetensors"
category = "checkpoints"
criticality = "flexible"
status = "resolved"
nodes = [{node_id = "36", node_type = "CheckpointLoaderSimple", widget_idx = 0, widget_value = "flux1-dev-fp8.safetensors"}]
hash = "78f49b2a2c359c37"

[tool.comfygit.models]
1d3825351f374aa7 = {filename = "t5xxl_fp16.safetensors", size = 9787841024, relative_path = "clip/t5xxl_fp16.safetensors", category = "clip", sources = ["https://huggingface.co/comfyanonymous/flux_text_encoders/resolve/main/t5xxl_fp16.safetensors"]}
38f082e7b86d146b = {filename = "ae.safetensors", size = 335304388, relative_path = "vae/ae.safetensors", category = "vae"}
a88c7c3d69609cdf = {filename = "clip_l.safetensors", size = 246144152, relative_path = "text_encoders/clip_l.safetensors", category = "text_encoders"}
78f49b2a2c359c37 = {filename = "flux1-dev-fp8.safetensors", size = 17246524772, relative_path = "checkpoints/flux1-dev-fp8.safetensors", category = "checkpoints", sources = ["https://huggingface.co/Comfy-Org/flux1-dev/resolve/main/flux1-dev-fp8.safetensors?download=true"]}
16dc7424ceec0771 = {filename = "Hyper-FLUX.1-dev-8steps-lora.safetensors", size = 1388026440, relative_path = "loras/Hyper-FLUX.1-dev-8steps-lora.safetensors", category = "loras", sources = ["https://huggingface.co/ByteDance/Hyper-SD/resolve/main/Hyper-FLUX.1-dev-8steps-lora.safetensors?download=true"]}
718b854a111f4401 = {filename = "FLUX-dev-lora-AntiBlur.safetensors", size = 687476088, relative_path = "loras/FLUX-dev-lora-AntiBlur.safetensors", category = "loras", sources = ["https://huggingface.co/Shakker-Labs/FLUX.1-dev-LoRA-AntiBlur/resolve/main/FLUX-dev-lora-AntiBlur.safetensors?download=true"]}

[tool.uv]
override-dependencies = ["uv>=0.11.8"]
exclude-dependencies = ["opencv-contrib-python", "opencv-python", "opencv-python-headless"]

[dependency-groups]
comfygit-manager-b2d41ad7 = [
    "comfygit-core==0.4.0",
    "watchdog>=6.0.0",
    "xxhash>=3.5.0",
    "zeroconf>=0.131.0",
]
comfygit-system = ["uv>=0.11.8"]
comfyui-fizznodes-bb0a0ce0 = [
    "numexpr",
    "numpy",
    "pandas",
]
ryanontheinside-27d1fcfb = [
    "matplotlib",
    "mido",
    "opencv-contrib-python-headless>=4.5.0",
    "openunmix",
    "pillow",
    "pygame",
    "pymunk>=6.8.0,<7.0.0",
    "scikit-image",
    "scipy",
]
rgthree-comfy-c0668886 = []
comfyui-basic-math-66850bf1 = []
