[project]
name = "comfygit-env-deforum-revamp"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "aiohttp>=3.11.8",
    "alembic",
    "av>=14.2.0",
    "blake3",
    "comfy-aimdo==0.3.0",
    "comfy-kitchen>=0.2.8",
    "comfyui-embedded-docs==0.4.4",
    "comfyui-frontend-package==1.43.18",
    "comfyui-workflow-templates==0.9.73",
    "einops",
    "filelock",
    "glfw",
    "kornia>=0.7.1",
    "numpy>=1.25.0",
    "pillow",
    "psutil",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "pyopengl",
    "pyyaml",
    "requests",
    "safetensors>=0.4.2",
    "scipy",
    "sentencepiece",
    "simpleeval>=1.0.0",
    "spandrel",
    "sqlalchemy>=2.0.0",
    "tokenizers>=0.13.3",
    "torch",
    "torchaudio",
    "torchsde",
    "torchvision",
    "tqdm",
    "transformers>=4.50.3",
    "yarl>=1.18.0",
]

[tool.comfygit]
schema_version = 2
comfyui_version = "v0.21.0"
comfyui_version_type = "release"
comfyui_commit_sha = "52976f3ea33cc2312c7b5a32e1c7510b203eefb6"
python_version = "3.12"

[tool.comfygit.nodes.comfygit-manager]
name = "comfygit-manager"
registry_id = "comfygit-manager"
repository = "https://github.com/comfygit-ai/comfygit-manager"
version = "0.1.1"
download_url = "https://cdn.comfy.org/akatz/comfygit-manager/0.1.1/node.zip"
source = "registry"
criticality = "required"

[tool.comfygit.nodes.comfyui-basic-math]
name = "ComfyUI-Basic-Math"
registry_id = "comfyui-basic-math"
repository = "https://github.com/akatz-ai/ComfyUI-Basic-Math"
version = "0.0.6"
download_url = "https://cdn.comfy.org/akatz/comfyui-basic-math/0.0.6/node.zip"
source = "registry"
criticality = "required"

[tool.comfygit.nodes.comfyui-deforum]
name = "ComfyUI-Deforum"
registry_id = "comfyui-deforum"
repository = "https://github.com/deforum-art/deforum-comfy-nodes"
version = "0.5.0"
download_url = "https://cdn.comfy.org/deforum/comfyui-deforum/0.5.0/node.zip"
source = "registry"
criticality = "required"

[tool.comfygit.workflows."deforum_flux_complex_v0.0.4"]
path = "workflows/deforum_flux_complex_v0.0.4.json"
nodes = ["comfyui-basic-math", "comfyui-deforum"]

[tool.comfygit.workflows."deforum_flux_complex_v0.0.4".custom_node_map]
DeforumGetNode = "comfyui-deforum"
DeforumSetNode = "comfyui-deforum"
"AnySwitch| Deforum" = "comfyui-deforum"
"ImageTransform| Deforum" = "comfyui-deforum"
"ImageColorMatch| Deforum" = "comfyui-deforum"

[[tool.comfygit.workflows."deforum_flux_complex_v0.0.4".models]]
filename = "Hyper-FLUX.1-dev-8steps-lora.safetensors"
category = "loras"
criticality = "flexible"
status = "resolved"
nodes = [{node_id = "763", node_type = "LoraLoaderModelOnly", widget_idx = 0, widget_value = "Hyper-FLUX.1-dev-8steps-lora.safetensors"}]
hash = "16dc7424ceec0771"

[[tool.comfygit.workflows."deforum_flux_complex_v0.0.4".models]]
filename = "flux1-dev-fp8.safetensors"
category = "checkpoints"
criticality = "flexible"
status = "resolved"
nodes = [{node_id = "36", node_type = "CheckpointLoaderSimple", widget_idx = 0, widget_value = "flux1-dev-fp8.safetensors"}]
hash = "78f49b2a2c359c37"

[[tool.comfygit.workflows."deforum_flux_complex_v0.0.4".models]]
filename = "FLUX-dev-lora-AntiBlur.safetensors"
category = "loras"
criticality = "flexible"
status = "resolved"
nodes = [{node_id = "765", node_type = "LoraLoaderModelOnly", widget_idx = 0, widget_value = "FLUX-dev-lora-AntiBlur.safetensors"}]
hash = "718b854a111f4401"

[tool.comfygit.workflows."deforum_flux_complex_v0.0.4".execution_contract]
version = 1
default_contract = "default"
api_prompt_file = "workflow_api/deforum_flux_complex_v0.0.4.api.json"
api_prompt_source = "comfyui_frontend"
api_prompt_generated_by = "comfygit-manager"
api_prompt_generated_at = "2026-05-15T07:38:33.329141Z"

[tool.comfygit.workflows."deforum_flux_complex_v0.0.4".execution_contract.contracts.default]
display_name = "Deforum"
description = "Create a deforum-style animation"

[[tool.comfygit.workflows."deforum_flux_complex_v0.0.4".execution_contract.contracts.default.inputs]]
name = "width"
type = "integer"
node_id = "76"
required = true
display_name = "Width"
widget_idx = 0
field_key = "value"
api_node_id = "76"
api_field_key = "value"
default = 1024
min = 128
max = 4096

[[tool.comfygit.workflows."deforum_flux_complex_v0.0.4".execution_contract.contracts.default.inputs]]
name = "height"
type = "integer"
node_id = "77"
required = true
display_name = "Height"
widget_idx = 0
field_key = "value"
api_node_id = "77"
api_field_key = "value"
default = 1024
min = 128
max = 4096

[[tool.comfygit.workflows."deforum_flux_complex_v0.0.4".execution_contract.contracts.default.inputs]]
name = "num_frames"
type = "integer"
node_id = "35"
required = true
display_name = "Num Frames"
widget_idx = 0
field_key = "value"
api_node_id = "35"
api_field_key = "value"
default = 10
min = 1
max = 500

[[tool.comfygit.workflows."deforum_flux_complex_v0.0.4".execution_contract.contracts.default.inputs]]
name = "seed"
type = "integer"
node_id = "244"
required = true
display_name = "Seed"
widget_idx = 0
field_key = "value"
api_node_id = "244"
api_field_key = "value"
default = 15
min = 0
max = 999999999

[[tool.comfygit.workflows."deforum_flux_complex_v0.0.4".execution_contract.contracts.default.inputs]]
name = "default_steps"
type = "integer"
node_id = "362"
required = true
display_name = "Steps"
widget_idx = 0
field_key = "value"
api_node_id = "362"
api_field_key = "value"
default = 8
min = 1
max = 20

[[tool.comfygit.workflows."deforum_flux_complex_v0.0.4".execution_contract.contracts.default.inputs]]
name = "default_denoise"
type = "number"
node_id = "760"
required = true
display_name = "Denoise"
widget_idx = 0
field_key = "value"
api_node_id = "760"
api_field_key = "value"
default = 0.5
min = 0
max = 1

[[tool.comfygit.workflows."deforum_flux_complex_v0.0.4".execution_contract.contracts.default.inputs]]
name = "cfg"
type = "number"
node_id = "761"
required = true
display_name = "CFG"
widget_idx = 0
field_key = "value"
api_node_id = "761"
api_field_key = "value"
default = 3.5
min = 0
max = 10

[[tool.comfygit.workflows."deforum_flux_complex_v0.0.4".execution_contract.contracts.default.inputs]]
name = "x_trans"
type = "number"
node_id = "770"
required = true
display_name = "X Translation"
widget_idx = 0
field_key = "value"
api_node_id = "770"
api_field_key = "value"
default = "10.0"
min = -1000
max = 1000

[[tool.comfygit.workflows."deforum_flux_complex_v0.0.4".execution_contract.contracts.default.inputs]]
name = "y_trans"
type = "number"
node_id = "771"
required = true
display_name = "Y Translation"
widget_idx = 0
field_key = "value"
api_node_id = "771"
api_field_key = "value"
default = 10
min = -1000
max = 1000

[[tool.comfygit.workflows."deforum_flux_complex_v0.0.4".execution_contract.contracts.default.inputs]]
name = "zoom"
type = "number"
node_id = "772"
required = true
display_name = "Zoom"
widget_idx = 0
field_key = "value"
api_node_id = "772"
api_field_key = "value"
default = 0.1
min = -10
max = 10

[[tool.comfygit.workflows."deforum_flux_complex_v0.0.4".execution_contract.contracts.default.inputs]]
name = "rotation"
type = "number"
node_id = "773"
required = true
display_name = "Rotation"
widget_idx = 0
field_key = "value"
api_node_id = "773"
api_field_key = "value"
default = -1
min = -360
max = 360

[[tool.comfygit.workflows."deforum_flux_complex_v0.0.4".execution_contract.contracts.default.inputs]]
name = "prompt_schedule"
type = "string"
node_id = "32"
required = true
display_name = "Prompt Schedule"
widget_idx = 0
field_key = "text"
api_node_id = "32"
api_field_key = "text"
default = "\"0\": \"Cat sushi\",\n\"30\": \"A cat running on the beach\""

[[tool.comfygit.workflows."deforum_flux_complex_v0.0.4".execution_contract.contracts.default.inputs]]
name = "image"
type = "image"
node_id = "280"
required = true
display_name = "Image"
widget_idx = 0
field_key = "image"
api_node_id = "280"
api_field_key = "image"
default = ""

[[tool.comfygit.workflows."deforum_flux_complex_v0.0.4".execution_contract.contracts.default.outputs]]
name = "save_video"
type = "video"
node_id = "779"
display_name = "Save Video"
selector = "primary"

[tool.comfygit.models]
78f49b2a2c359c37 = {filename = "flux1-dev-fp8.safetensors", size = 17246524772, relative_path = "checkpoints/flux1-dev-fp8.safetensors", category = "checkpoints", sources = ["https://huggingface.co/Comfy-Org/flux1-dev/resolve/main/flux1-dev-fp8.safetensors?download=true"]}
16dc7424ceec0771 = {filename = "Hyper-FLUX.1-dev-8steps-lora.safetensors", size = 1388026440, relative_path = "loras/Hyper-FLUX.1-dev-8steps-lora.safetensors", category = "loras", sources = ["https://huggingface.co/ByteDance/Hyper-SD/resolve/main/Hyper-FLUX.1-dev-8steps-lora.safetensors?download=true"]}
718b854a111f4401 = {filename = "FLUX-dev-lora-AntiBlur.safetensors", size = 687476088, relative_path = "loras/FLUX-dev-lora-AntiBlur.safetensors", category = "loras", sources = ["https://huggingface.co/Shakker-Labs/FLUX.1-dev-LoRA-AntiBlur/resolve/main/FLUX-dev-lora-AntiBlur.safetensors?download=true"]}

[tool.uv]
override-dependencies = ["uv>=0.10.0"]
exclude-dependencies = ["opencv-contrib-python", "opencv-python", "opencv-python-headless"]

[dependency-groups]
comfygit-manager-b2d41ad7 = [
    "comfygit-core==0.4.0",
    "watchdog>=6.0.0",
    "xxhash>=3.5.0",
    "zeroconf>=0.131.0",
]
comfygit-system = ["uv>=0.10.0"]
comfyui-basic-math-66850bf1 = []
comfyui-deforum-86dd1455 = []
